--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,11 +8,11 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag(@item.image ,class:"item-box-img") %>
-      <%# 商品が売れている場合は、sold outを表示しましょう %>
-      <%#div class="sold-out">
+      <% if @item.purchase_record.present? %>
+      <div class="sold-out">
         <span>Sold Out!!</span>
       </div>
-      <%# //商品が売れている場合は、sold outを表示しましょう %>
+      <% end %>%
     </div>
     <div class="item-price-box">
       <span class="item-price">
@@ -23,20 +23,17 @@
       </span>
     </div>
 
-    
-    <% if user_signed_in? && current_user.id == @item.user_id%>
-    <%= link_to "商品の編集",edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
-    <p class="or-text">or</p>
-    <%= link_to "削除",item_path(@item.id), method: :delete, class:"item-destroy" %>
-
-    <% else %>
-      <% if user_signed_in? %>
-    
-    <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
-    
+    <% if @item.purchase_record.nil? %>
+      <% if user_signed_in? && current_user.id == @item.user_id  %>
+        <%= link_to "商品の編集",edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
+        <p class="or-text">or</p>
+        <%= link_to "削除",item_path(@item.id), method: :delete, class:"item-destroy" %>
 
       <% else %>
     
+        <%= link_to "購入画面に進む", item_purchases_path(@item),class:"item-red-btn"%>
+      <% end %>
+    <% end %>
 
     <div class="item-explain-box">
       <span><%= @item.description %></span>
@@ -79,11 +76,9 @@
         <span>不適切な商品の通報</span>
       </div>
     </div>
-    <% end %>
    
   </div>
   <%# /商品の概要 %>
-  <% end %>
   <div class="comment-box">
     <form>
       <textarea class="comment-text"></textarea>
